modificacion imagenes tienda

--- a/pages/medicamentos.html
+++ b/pages/medicamentos.html
@@ -48,21 +48,22 @@
   </header>
   <main>
     <h1 class="text-center pt-2 pb-2 fs-2 fw-bold">Comprar receta</h1>
-    <h4 class="text-center ps-2">Podés enviarnos tu receta  digital o en papel.</h4>
-    <h4 class="text-center ps-2">Las recetas y bonos en formato papel deberán ser entregados al momento de recibir el producto</h4>
-    <h4 class="text-start ps-4">Para canjear una receta siga los siguientes tres simples pasos:</h4>
+    <h4 class="text-center ps-2 pt-4">Podés enviarnos tu receta  digital o en papel.</h4>
+    <h4 class="text-center ps-4 pt-2">Las recetas y bonos en formato papel deberán ser entregados al momento de recibir el producto</h4>
     <div class="row g-0 text-center">
-  <div class="col-sm-6 col-md-8 text-start ps-4">
-    <ol class="text-start">
-      <li class="fs-5">Verifique que trabajamos su <a class="medLink btn btn-primary" href="#cobMed">cobertura médica</a> o <a class="medLink btn btn-primary" href="#bonoDesc">bono de descuento</a> haciendo click en los enlaces correspondientes.</li>
-      <li class="fs-5">Los pedidos realizados de 9 a 13, se envían o retiran a partir de las 14hs. 
+  <div class="col-sm-1 col-md-1 text-start ps-4"></div>
+  <div class="col-sm-4 col-md-6 text-start ps-4">
+    <h4 class="text-start ps-4 pt-2">Para canjear una receta siga los siguientes tres simples pasos:</h4>
+    <ol class="text-start pt-3">
+      <li class="fs-5 pt-2">Verifique que trabajamos su <a class="medLink btn btn-primary" href="#cobMed">cobertura médica</a> o <a class="medLink btn btn-primary" href="#bonoDesc">bono de descuento</a> haciendo click en los enlaces correspondientes.</li>
+      <li class="fs-5 pt-2">Los pedidos realizados de 9 a 13, se envían o retiran a partir de las 14hs. 
         El envío o retiro se coordina por Whatsapp. 
         Si desea recibir el pedido en su domicilio, verifique nuestra zona de cobertura:</li>
-        <iframe class="deliveryMap" src="https://www.google.com/maps/d/u/0/embed?mid=1zMrpd11MKDvt1yL2sNnnGMmre0uNdcw&ehbc=2E312F" width="300" height="300"></iframe>
-      <li class="fs-5">Para enviar tu receta hacé click <a class="medLink w-10 btn btn-primary" href="https://www.whatsapp.com/" target="_blank">aquí</a></li>
+        <iframe class="deliveryMap pt-4" src="https://www.google.com/maps/d/u/0/embed?mid=1zMrpd11MKDvt1yL2sNnnGMmre0uNdcw&ehbc=2E312F" width="300" height="300"></iframe>
+      <li class="fs-5 pt-2 pb-4">Para enviar tu receta hacé click <a class="medLink w-10 btn btn-primary" href="https://www.whatsapp.com/" target="_blank">aquí</a></li>
     </ol>
   </div>
-  <div class="col-6 col-md-4 text-center">
+  <div class="col-sm-6 col-md-4 text-center pt-4">
     <h5 class="cobMed text-decoration-underline" >Coberturas médicas</h5>
     <p class="cobItem">Accord Salud</p>
     <p class="cobItem">Galeno</p>
