--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -14,9 +14,9 @@
 <body>
   <header class="header position-sticky top-0">
     <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">
-          <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
+      <div class="container-fluid" >
+        <a class="navbar-brand" href="#">
+          <img src="./assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -26,18 +26,18 @@
             <div class="col">
               <ul class="nav nav-pills nav-fill">
                 <li class="nav-item">
-                  <a class="nav-link" href="../index.html">Inicio</a>
+                  <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./medicamentos.html">Comprar receta</a>
+                  <a class="nav-link" href="./pages/medicamentos.html">Comprar receta</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./tienda.html">Tienda</a>
+                  <a class="nav-link" href="./pages/tienda.html">Tienda</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./noticias.html">Noticias</a>
+                  <a class="nav-link" href="./pages/noticias.html">Noticias</a>
                 </li><li class="nav-item">
-                  <a class="nav-link" href="./contacto.html">Contacto</a>
+                  <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                 </li>
               </ul>
             </div>
