--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -14,9 +14,9 @@
 <body>
   <header class="header position-sticky top-0">
     <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">
-          <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
+      <div class="container-fluid" >
+        <a class="navbar-brand" href="#">
+          <img src="./assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -26,18 +26,18 @@
             <div class="col">
               <ul class="nav nav-pills nav-fill">
                 <li class="nav-item">
-                  <a class="nav-link" href="../index.html">Inicio</a>
+                  <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./medicamentos.html">Comprar receta</a>
+                  <a class="nav-link" href="./pages/medicamentos.html">Comprar receta</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./tienda.html">Tienda</a>
+                  <a class="nav-link" href="./pages/tienda.html">Tienda</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./noticias.html">Noticias</a>
+                  <a class="nav-link" href="./pages/noticias.html">Noticias</a>
                 </li><li class="nav-item">
-                  <a class="nav-link" href="./contacto.html">Contacto</a>
+                  <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                 </li>
               </ul>
             </div>
@@ -53,47 +53,47 @@
     
     <div class="galeria">
       <div class="contenedor">
-        <img class="imgCard1" src="../assets/img/productos_con_descuento/Set_Carolina_Herrera.webp" alt="Imagen del set Girl Blush">
+        <img class="imgCard1" src="../assets/img/productos_con_descuento/1_set_ch.webp" alt="Imagen del set Girl Blush">
         <span class="texto">Set Good Girl Blush Carolina Herrera</span>
         <span class="priceCard w-50 btn btn-primary">$180.000</span>
       </div>
       <div class="contenedor">
-        <img class="imgCard2" src="../assets/img/productos_con_descuento/Tommy.webp" alt="Imagen del perfume y el bolso">
+        <img class="imgCard2" src="../assets/img/productos_con_descuento/2_tommy.webp" alt="Imagen del perfume y el bolso">
         <span class="texto">Set Tommy Men Tommy Hilfiger</span>
         <span class="priceCard w-50 btn btn-primary">$155.000</span>
       </div>
       <div class="contenedor">
-        <img class="imgCard3" src="../assets/img/productos_con_descuento/Fame.webp" alt="Imagen del perfume y el body lotion">
+        <img class="imgCard3" src="../assets/img/productos_con_descuento/3_fame.webp" alt="Imagen del perfume y el body lotion">
         <span class="texto">Set Fame Mujer Paco Rabanne Fame</span>
         <span class="priceCard w-50 btn btn-primary">$170.000</span>
       </div>
       <div class="contenedor">
-        <img class="imgCard4" src="../assets/img/productos_con_descuento/Ga-ma_Cepillo_Alisador.webp" alt="Imagen del Cepillo Alisador Ga-ma">
+        <img class="imgCard4" src="../assets/img/productos_con_descuento/4_cepillo_ga-ma.webp" alt="Imagen del Cepillo Alisador Ga-ma">
         <span class="texto">Gama Cepillo Alisador De Pelo Modelador Glamour Brush</span>
         <span class="priceCard w-50 btn btn-primary">$60.000</span>
       </div>
       <div class="contenedor">
-        <img class="imgCard5" src="../assets/img/productos_con_descuento/Afeitadora_Ga-ma.webp" alt="Imágen de la Afeitadora Gama Italy">
+        <img class="imgCard5" src="../assets/img/productos_con_descuento/5_afeitadora_ga-ma.webp" alt="Imágen de la Afeitadora Gama Italy">
         <span class="texto">Afeitadora Gama Italy BECSH311 Negra</span>
         <span class="priceCard w-50 btn btn-primary">$100.000</span>
       </div>
       <div class="contenedor">
-        <img class="imgCard6" src="../assets/img/productos_con_descuento/Omron.webp" alt="Imagen del tensiómetro Omron de muñeca">
+        <img class="imgCard6" src="../assets/img/productos_con_descuento/6_tensiometro_omron.webp" alt="Imagen del tensiómetro Omron de muñeca">
         <span class="texto">Tensiómetro Omron Hem-6123 De Muñeca</span>
         <span class="priceCard w-50 btn btn-primary">$55.000</span> 
       </div>
       <div class="contenedor">
-        <img class="imgCard7" src="../assets/img/productos_con_descuento/Combo_Dermaglos_Solar.webp" alt="Imagen de los productos del combo Dermaglós">
+        <img class="imgCard7" src="../assets/img/productos_con_descuento/7_combo_dermaglos.webp" alt="Imagen de los productos del combo Dermaglós">
         <span class="texto">Combo Dermaglós Solar</span>
         <span class="priceCard w-50 btn btn-primary">$28.000</span>
       </div>
       <div class="contenedor">
-        <img class="imgCard8" src="../assets/img/productos_con_descuento/Combo_Anticaida_Valcatil.webp" alt="Imagen de Cápsulas y Shampoo">
+        <img class="imgCard8" src="../assets/img/productos_con_descuento/8_combo_valcatil.webp" alt="Imagen de Cápsulas y Shampoo">
         <span class="texto">Combo Anticaída Valcatil Max</span>
         <span class="priceCard w-50 btn btn-primary">$14.000</span>
       </div>
       <div class="contenedor">
-        <img class="imgCard9" src="../assets/img/productos_con_descuento/Curflex_Duo.webp" alt="imagen Curflex Duo">
+        <img class="imgCard9" src="../assets/img/productos_con_descuento/9_curflex_duo.webp" alt="imagen Curflex Duo">
         <span class="texto">Curflex Duo x 310 g Sabor Naranja</span>
         <span class="priceCard w-50 btn btn-primary">$16.000</span>
       </div>
