modificaciones en paginas inicio, medicamentos y noticias

--- a/index.html
+++ b/index.html
@@ -53,16 +53,18 @@
       <section class="mainSection">
         <h3 class="mainSectionTitle">Nuestra historia</h3>
         <p class="mainSectionText">Farmacia Noble surge en agosto de 1990 como un sueño familiar.</p> 
-        <p class="mainSectionText">Atendida desde sus orígenes por Bernardo y Bianca Noble, ambos profesionales farmacéuticos, fuimos creciendo también las áreas de salud y belleza, ganando la confianza y el cariño de nuestros clientes, que siempre vuelven en busca de consejos y sugerencias.</p>
+        <p class="mainSectionText">Atendida desde sus orígenes por Bernardo y Bianca Noble, ambos profesionales farmacéuticos, fuimos creciendo también las áreas de salud y belleza. </p>
+        <img class="historia" src="./assets/img/historia.jpg" alt="Imagen fachada Farmacia Noble">
       </section>
       <section class="mainSection">
         <h3 class="mainSectionTitle">Nuestra misión</h3>
         <p class="mainSectionText">Desde el inicio, nuestra misión es brindar un servicio de calidad orientada a nuestros clientes, con la premisa de que la satisfacción de nuestros clientes es lo primero.</p>
         <p class="mainSectionText">Es a ellos a quien abocamos nuestra dedicación y brindamos servicios y productos de calidad. </p>
+        <img class="mision" src="./assets/img/mision.jpg" alt="Imagen de personal atendiendo a una cliente">
       </section>
       <section class="mainSection">
         <h3 class="mainSectionTitle">Nuestro staff</h3>
-        <p class="mainSectionText">Les presentamos a las maravillosas personas que forman parte de nuestro equipo, siempre dispuestos a brindar los mejores consejos de farmacia, perfumería y dermocosmética.</p>
+        <p class="mainSectionText">Les presentamos a las maravillosas personas que forman parte de nuestro equipo, siempre dispuestos a brindar los mejores consejos de farmacia, perfumería y dermocosmética, ganando la confianza y el cariño de nuestros clientes, que siempre vuelven en busca de consejos y sugerencias.</p>
         <img class="staff" src="./assets/img/staff.jpg" alt="Imagen del personal de Farmacia">
       </section>
     </div>
