--- a/pages/medicamentos.html
+++ b/pages/medicamentos.html
@@ -14,7 +14,7 @@
 <body>
   <header class="header position-sticky top-0">
     <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
+      <div class="container-fluid" >
         <a class="navbar-brand" href="../index.html">
           <img src="../assets/img/logo.svg" alt="Logo Farmacia Noble" width="100" height="48">
         </a>
@@ -32,10 +32,10 @@
                   <a class="nav-link active" aria-current="page" href="./medicamentos.html">Comprar receta</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./tienda.html">Tienda</a>
+                  <a class="nav-link" href="tienda.html">Tienda</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./noticias.html">Noticias</a>
+                  <a class="nav-link" href="noticias.html">Noticias</a>
                 </li><li class="nav-item">
                   <a class="nav-link" href="./contacto.html">Contacto</a>
                 </li>
